<resources>
    <string name="app_name">Inquirer v.0.1</string>
    <string name="question_1">Question 1</string>
    <string name="surname">Surname N. L.</string>
    <string name="subject">Some Subject</string>
    <string name="answer_1">Answer 1</string>
    <string name="answer_2">Answer 2</string>
    <string name="answer_3">Answer 3</string>
    <string name="answer_4">Answer 4</string>
    <string name="ok">OK</string>
    <string name="welc_text">Please, Login or Register</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_login">Enter Login</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="start_text">Please, scan QR Code to get started</string>
    <string name="scan">SCAN QR CODE</string>
</resources>
